@@ -211,6 +211,13 @@ export default function cli() {
 		.allowUnknownOption(true)
 		.action( withSpinner(env.createBlock) )
 
+	// Update a Design System Block Command.
+	program.command('update-block')
+		.description('Updates a CA.gov Design System Block.')
+		.argument('<slug>', 'Plugin slug to update.')
+		.allowUnknownOption(true)
+		.action( withSpinner(env.updateBlock) )
+
 	// Test Command.
 	// Ensure this is commented out.
 	program.command('test')
