@@ -4,17 +4,19 @@
 import path from 'node:path';
 import fs from 'fs-extra';
 import { spawn } from 'node:child_process';
+import inquirer from 'inquirer';
 
 /**
  * Internal dependencies
  */
 import {runCmd} from '../../utils.js';
+import updateBlock from './update-block.js';
 
 const localPath = path.resolve( path.join(process.cwd(), 'node_modules/@caweb/cli/package.json') )
 const pkg = JSON.parse( await fs.readFile(localPath) );
 
 /**
- * Get Block Component Latest Package Version
+ * Get NPM Package Latest Version
  * @param {string}  options.slug   Block slug.
  * @param {Object}  options.spinner A CLI spinner which indicates progress.
  */
@@ -44,45 +46,65 @@ export default async function createBlock({
 	debug,
 	slug
 } ) {
-	
-		// Get cagov component version if it exists.
-		let version = await getNPMPackageVersion(`@cagov/${slug}`, spinner);
+		// if block directory already exists.	
+		if( fs.existsSync(path.resolve(process.cwd(), slug)) ){
+			spinner.info(`${slug} already exists.`)
 
-		// call the wordpress create-block command using our template.
-		await runCmd(
-			'npx',
-			[
-				`@wordpress/create-block`,
-				slug,
-				'--template=' + path.resolve( path.join(process.cwd(), 'node_modules/@caweb/cli/lib/template/index.cjs') )
-			],
-			spinner,
-			{
-				stdio: 'inherit'
+			const { yesUpdate } = await inquirer.prompt( [
+				{
+					type: 'confirm',
+					name: 'yesUpdate',
+					message: 'Would you like to update it?',
+					default: false,
+				},
+			] );
+
+			if( yesUpdate ){
+				spinner.text = `Updating ${slug}...`;
+				await updateBlock({spinner, debug, slug});
 			}
-		)
+		// create a new block
+		}else{
+			// Get cagov component version if it exists.
+			let version = await getNPMPackageVersion(`@cagov/${slug}`, spinner);
 
-		// install cagov npm package if it exists.
-		if( version ){
-			// capture spinner.text result
-			let spinnerText = spinner.text;
-			spinner.text = '';
-
+			// call the wordpress create-block command using our template.
 			await runCmd(
-				'npm',
+				'npx',
 				[
-					'install',
-					`@cagov/${slug}@${version}`,
+					`@wordpress/create-block`,
+					slug,
+					'--template=' + path.resolve( path.join(process.cwd(), 'node_modules/@caweb/cli/lib/template/index.cjs') )
 				],
 				spinner,
 				{
-					cwd: path.resolve( path.join(process.cwd(), slug ) ),
 					stdio: 'inherit'
 				}
 			)
-			
-			spinner.text = spinnerText;
 
+			// install cagov npm package if it exists.
+			if( version ){
+				// capture spinner.text result
+				let spinnerText = spinner.text;
+				spinner.text = '';
+
+				await runCmd(
+					'npm',
+					[
+						'install',
+						`@cagov/${slug}@${version}`,
+					],
+					spinner,
+					{
+						cwd: path.resolve( path.join(process.cwd(), slug ) ),
+						stdio: 'inherit'
+					}
+				)
+				
+				spinner.text = spinnerText;
+
+			}
 		}
+		
 		
 };
