@@ -16,6 +16,7 @@ import installPath from '@wordpress/env/lib/commands/install-path.js';
 import shell from './shell.js';
 import updatePlugins from './tasks/update-plugins.js'
 import createBlock from './blocks/create-block.js'
+import updateBlock from './blocks/update-block.js'
 
 import test from './test.js';
 
@@ -38,5 +39,6 @@ export {
 	test,
 	shell,
 	updatePlugins,
-	createBlock
+	createBlock,
+	updateBlock
 }
