@@ -1,17 +1,9 @@
 /**
  * Internal dependencies
  */
-import start from './start.js';
-import destroy from './destroy.js';
-import test from './test.js';
-import shell from './shell.js';
 
-import updatePlugins from './tasks/update-plugins.js'
+import * as commands from './commands/index.js';
 
-export {
-	start,
-	destroy,
-	test,
-	shell,
-	updatePlugins
+export default {
+	...commands
 }
