@@ -18,7 +18,6 @@ const npmDependencies = [
 
 const npmDevDependencies = [];
 
-// assetsPath: join( __dirname, 'assets' ),
 module.exports = {
 	pluginTemplatesPath: join( __dirname, 'plugin' ),
 	blockTemplatesPath: join( __dirname, 'block' ),
