@@ -1,17 +1,0 @@
-/**
- * {{title}} Gulp Configuration File
- *
- * @package cagov-design-system
- */
-
-
-module.exports = {
-	{{slugPascalCase}}CSS: [ // {{title}} CSS
-		'node_modules/@cagov/*/dist/index.css',
-		'assets/css/*'
-	], 
-	{{slugPascalCase}}JS: [ // {{title}} JS
-		'node_modules/@cagov/*/dist/index.js',
-		'assets/js/*'
-	]
-};
